# fileserving-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: api.rs  auth.rs  config.rs  crypto.rs  main.rs  media.rs  storage.rs  transfer.rs
web/: index.html
web/css/: fst.css
web/js/: fst.js
